Controle de ponto adicionado
